<resources>
    <string name="app_name">Gank</string>
    <string name="app_home_title">首页</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_all">全部</string>
    <string name="title_recommend">推荐</string>
    <string name="title_fuli">福利</string>
    <string name="title_android">Android</string>
    <string name="title_ios">iOS</string>
    <string name="title_video">休息视频</string>
    <string name="title_resource">拓展资源</string>
    <string name="title_html">前端</string>

    <string name="setting_clean_cache">清空图片缓存</string>
    <string name="setting_open_soure">开源协议</string>
</resources>
